5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1723_2502.log
== SUBMITION (2019-05-15 21:58:51) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = (12)**0.5
i = 0

while(n>0):

	soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
	i = i  + 1
	n = n-1
print(round(soma,8))
-- EXECUTION TIME:
0.17065
-- ERROR:
  File "/home/codebench/codes/1723/2502/main.py", line 9
    soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
                                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 21:58:53) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = (12)**0.5
i = 0

while(n>0):

	soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
	i = i  + 1
	n = n-1
print(round(soma,8))
-- EXECUTION TIME:
0.281631
-- ERROR:
  File "/home/codebench/codes/1723/2502/main.py", line 9
    soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
                                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 21:59:11) 
-- CODE:
t = int(input("tambaqui: "))
p1 = float(input("percentual: "))/100
t1 = int(input("quantidade retirada: "))
anos = 0
while(t>0)and(t<12000):
	t = t + p1*t - t1
	anos = anos + 1
if(t<=0):
	print("EXTINCAO")
	print(anos)
elif(t >=12000):
	print("LIMITE")
	print(anos)
-- EXECUTION TIME:
0.174029
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2502/main.py", line 2, in <module>
    p1 = float(input())/100
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 21:59:13) 
-- CODE:
t = int(input("tambaqui: "))
p1 = float(input("percentual: "))/100
t1 = int(input("quantidade retirada: "))
anos = 0
while(t>0)and(t<12000):
	t = t + p1*t - t1
	anos = anos + 1
if(t<=0):
	print("EXTINCAO")
	print(anos)
elif(t >=12000):
	print("LIMITE")
	print(anos)
-- EXECUTION TIME:
0.170545
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2502/main.py", line 2, in <module>
    p1 = float(input())/100
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 21:59:13) 
-- CODE:
t = int(input("tambaqui: "))
p1 = float(input("percentual: "))/100
t1 = int(input("quantidade retirada: "))
anos = 0
while(t>0)and(t<12000):
	t = t + p1*t - t1
	anos = anos + 1
if(t<=0):
	print("EXTINCAO")
	print(anos)
elif(t >=12000):
	print("LIMITE")
	print(anos)
-- EXECUTION TIME:
0.136499
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2502/main.py", line 2, in <module>
    p1 = float(input())/100
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 21:59:13) 
-- CODE:
t = int(input("tambaqui: "))
p1 = float(input("percentual: "))/100
t1 = int(input("quantidade retirada: "))
anos = 0
while(t>0)and(t<12000):
	t = t + p1*t - t1
	anos = anos + 1
if(t<=0):
	print("EXTINCAO")
	print(anos)
elif(t >=12000):
	print("LIMITE")
	print(anos)
-- EXECUTION TIME:
0.177669
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1723/2502/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 21:59:13) 
-- CODE:
t = int(input("tambaqui: "))
p1 = float(input("percentual: "))/100
t1 = int(input("quantidade retirada: "))
anos = 0
while(t>0)and(t<12000):
	t = t + p1*t - t1
	anos = anos + 1
if(t<=0):
	print("EXTINCAO")
	print(anos)
elif(t >=12000):
	print("LIMITE")
	print(anos)
-- EXECUTION TIME:
0.285415
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1723/2502/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:03:41) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = (12)**0.5
i = 0

while(n>0):

	soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
	i = i  + 1
	n = n-1
print(round(soma,8))
-- EXECUTION TIME:
0.20083
-- ERROR:
  File "/home/codebench/codes/1723/2502/main.py", line 9
    soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
                                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:03:43) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = (12)**0.5
i = 0

while(n>0):

	soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
	i = i  + 1
	n = n-1
print(round(soma,8))
-- EXECUTION TIME:
0.158879
-- ERROR:
  File "/home/codebench/codes/1723/2502/main.py", line 9
    soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
                                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:03:54) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = (12)**0.5
i = 0

while(n>0):

	soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
	i = i  + 1
	n = n-1
print(round(soma,8))
-- ERROR:
File "XXXX", line 9
    soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:03:59) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = (12)**0.5
i = 0

while(n>0):

soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
	i = i  + 1
	n = n-1
print(round(soma,8))
-- ERROR:
File "XXXX", line 9
    soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:04:07) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = (12)**0.5
i = 0

while(n>0):
	soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
	i = i  + 1
	n = n-1
print(round(soma,8))
-- ERROR:
File "XXXX", line 8
    soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:04:50) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = (12)**0.5
i = 0

while(n>0):
	soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
	i = i  + 1
	n = n-1
print(round(soma,8))
-- EXECUTION TIME:
0.168317
-- ERROR:
  File "/home/codebench/codes/1723/2502/main.py", line 8
    soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
                                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:04:50) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = (12)**0.5
i = 0

while(n>0):
	soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
	i = i  + 1
	n = n-1
print(round(soma,8))
-- ERROR:
File "XXXX", line 8
    soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:04:59) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = (12)**0.5
i = 0

while(n>0):

	soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
	i = i  + 1
	n = n-1
print(round(soma,8))
-- ERROR:
File "XXXX", line 9
    soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:05:16) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = (12)**0.5
i = 0

while(n>0):

	soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
	i = i + 1
	n = n - 1
print(round(soma,8))
-- EXECUTION TIME:
0.124373
-- ERROR:
  File "/home/codebench/codes/1723/2502/main.py", line 9
    soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
                                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:05:17) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = (12)**0.5
i = 0

while(n>0):

	soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
	i = i + 1
	n = n - 1
print(round(soma,8))
-- ERROR:
File "XXXX", line 9
    soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:05:46) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = (12)**0.5
i = 0

while(n>0):
	soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
	i = i + 1
	n = n - 1
print(round(soma,8))
-- ERROR:
File "XXXX", line 8
    soma = soma + (pi1 * (1/((2*i + 1)(3i)))((-1)**i))
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:06:03) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = (12)**0.5
i = 0

while(n>0):
	soma = soma + (pi1 * (1/((2*i + 1)(3*i)))((-1)**i))
	i = i + 1
	n = n - 1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma + (pi1 * (1/((2*i + 1)(3*i)))((-1)**i))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:06:05) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = (12)**0.5
i = 0

while(n>0):
	soma = soma + (pi1 * (1/((2*i + 1)(3*i)))((-1)**i))
	i = i + 1
	n = n - 1
print(round(soma,8))
-- EXECUTION TIME:
0.182636
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2502/main.py", line 8, in <module>
    soma = soma + (pi1 * (1/((2*i + 1)(3*i)))((-1)**i))
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:06:08) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = (12)**0.5
i = 0

while(n>0):
	soma = soma + (pi1 * (1/((2*i + 1)(3*i)))((-1)**i))
	i = i + 1
	n = n - 1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma + (pi1 * (1/((2*i + 1)(3*i)))((-1)**i))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:35:11) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = (12)**0.5
i = 0

while(n>0):
	soma = soma + (pi1 * (1/((2*i + 1)(3**i)))*((-1)**i))
	i = i + 1
	n = n - 1
print(round(soma,8))
-- EXECUTION TIME:
0.196154
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2502/main.py", line 8, in <module>
    soma = soma + (pi1 * (1/((2*i + 1)(3**i)))*((-1)**i))
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:35:19) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = (12)**0.5
i = 0

while(n>0):
	soma = soma + (pi1 * (1/((2*i + 1)*(3**i)))*((-1)**i))
	i = i + 1
	n = n - 1
print(round(soma,8))
-- EXECUTION TIME:
0.158936
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
